--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			</a>
 
 			<!-- Replace # with your store URL -->
-			<a target="_blank" href="https://tienda.edercraft.es" class="item store">
+			<a target="_blank" href="https://edercraft.es/tienda" class="item store">
 			<div>
 				<img src="img/store.png" alt="Minecraft store icon" class="img">
 				<p class="subtitle">Dona en nuestra</p>
